Gnome 43: Fix double borders in context menus

--- a/gtk-4.0/gtk-dark.css
+++ b/gtk-4.0/gtk-dark.css
@@ -2824,7 +2824,6 @@ menu, .menu, .context-menu {
   margin: 4px;
   padding: 2px 0px;
   background: #161b20;
-  border: 1px solid #0b0e11;
   border-radius: 5px;
   font: initial; }
   .csd menu,
